# gptimpl

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml  requirements.in  requirements.txt
gptimpl/: main.py
lib/: ai_codegen.py
src/: chat.rs  implement.rs  lib.rs  main.rs  parse.rs
templates/: block.html  impl.html  sample.prompt
tests/: fib.py
tests/fixtures/: fib.py
