[package]
name = "chatimpl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
chatgpt_rs = { version = "1.1.0", features = ["json", "streams"] }
clap = { version = "4.2.1", features = ["derive", "env"] }
lazy_static = "1.4.0"
regex = "1.7.3"
rustpython-parser = "0.2.0"
tokio = { version = "1.27.0", features = ["full"] }
